--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
             
             // Копирование конфига
             copyConfigBtn.addEventListener('click', () => {
-                const configLink = 'https://example.com/config';
-                navigator.clipboard.writeText(configLink)
+                const configLink = 'https://github.com/Gamardal/tinstaller/vibe.json';
+               navigator.clipboard.writeText(configLink)
                     .then(() => {
                         // Показать уведомление
                         notification.classList.add('show');
