--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             
             // Копирование конфига
             copyConfigBtn.addEventListener('click', () => {
-                const configLink = 'https://github.com/Gamardal/tinstaller/vibe.json';
+                const configLink = 'https://gamardal.github.io/tinstaller/vibe.json';
                navigator.clipboard.writeText(configLink)
                     .then(() => {
                         // Показать уведомление
